<resources>
    <string name="app_name">PreetyAdminPanel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_user">Users</string>
    <string name="menu_host">Host</string>
    <string name="menu_agency">Agency</string>
    <string name="menu_manage_agency">Manage Agency</string>
    <string name="menu_sub_admin">Sub-Admin</string>
    <string name="menu_message">Messages</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_report">Reports</string>
    <string name="menu_recharge">Recharges</string>
    <string name="menu_account">Accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="latest_members">Latest Members</string>
    <string name="view_all">View All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_agency">Create Agency</string>
    <string name="txt_username">Full Name</string>
    <string name="txt_username_hint">Enter full name</string>
    <string name="txt_phone">WhatsApp NUmber</string>
    <string name="txt_phone_hint">Phone number</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">Enter email address</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">**********</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_create">Create</string>
    <string name="txt_agency_code">Agency Code</string>
    <string name="txt_agency_name">Agency Name</string>
    <string name="title_activity_agency_main">AgencyMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_login_header">Login</string>
    <string name="txt_login_subheader">Welcome</string>
    <string name="txt_login">Login</string>
    <string name="txt_roll">Select Role</string>
    <string name="title_profile">Profile</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="users">Users</string>
    <string name="update_profile">Update Profile</string>
    <string name="change">Change</string>
</resources>