<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/HeaderTextStyle"
            android:text="@string/txt_login_header"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/NormalTextStyle"
            android:text="@string/txt_login_subheader"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            style="@style/HeaderTextStyle"
            android:text="@string/txt_email" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="@dimen/_14sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:autofillHints="" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_password"
            style="@style/HeaderTextStyle"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="@dimen/_14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_roll"
            style="@style/HeaderTextStyle"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/selectRole"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/role_list"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/MyButtonStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_login"
            android:textAllCaps="true"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>